✨ feat(web): Add SEO metadata, PWA support, and security policy

--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,32 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Decode TOTP QR codes and extract authentication secrets. Free online tool for scanning and decoding two-factor authentication QR codes." />
+  <meta name="keywords" content="TOTP, QR code, decoder, 2FA, two-factor authentication, authenticator, scanner" />
+  <meta name="author" content="TOTP Decoder" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://totp-decoder.vakaf.space/" />
+  <meta property="og:title" content="TOTP QR Decoder - Free Online Tool" />
+  <meta property="og:description" content="Decode TOTP QR codes and extract authentication secrets. Free online tool for scanning and decoding two-factor authentication QR codes." />
+  <meta property="og:image" content="https://totp-decoder.vakaf.space/logo512.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://totp-decoder.vakaf.space/" />
+  <meta property="twitter:title" content="TOTP QR Decoder - Free Online Tool" />
+  <meta property="twitter:description" content="Decode TOTP QR codes and extract authentication secrets. Free online tool for scanning and decoding two-factor authentication QR codes." />
+  <meta property="twitter:image" content="https://totp-decoder.vakaf.space/logo512.png" />
+
+  <!-- Favicon and PWA -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#000000" />
+  
   <title>TOTP QR Decoder</title>
   <script>
     // Detect browser language and set html lang attribute
